--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
   "devDependencies": {
     "@parcel/transformer-sass": "^2.0.0-beta.2",
     "parcel": "^2.0.0-beta.2"
+  },
+  "dependencies": {
+    "core-js": "^3.9.1",
+    "regenerator": "^0.14.7",
+    "runtime": "^0.14.1"
   }
 }
