--- a/package.json
+++ b/package.json
@@ -16,6 +16,14 @@
   "dependencies": {
     "core-js": "^3.9.1",
     "regenerator": "^0.14.7",
-    "runtime": "^0.14.1"
-  }
+    "runtime": "^0.14.1",
+    "yarn": "^1.22.10"
+  },
+  "presets": [
+    "env"
+  ],
+  "plugins": [
+    "transform-runtime",
+    "@babel/plugin-proposal-class-properties"
+  ]
 }
