--- a/package.json
+++ b/package.json
@@ -1,29 +1,21 @@
 {
-  "name": "recipegenerator",
+  "name": "forkify",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.html",
+  "description": "Recipe application",
+  "default": "index.html",
   "scripts": {
     "start": "parcel index.html",
-    "build": "index.html"
+    "build": "parcel build index.html --dist-dir ./dist"
   },
-  "author": "",
+  "author": "Jonas Schedtmann",
   "license": "ISC",
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.0.0-beta.2",
-    "parcel": "^2.0.0-beta.2"
+    "parcel": "^2.0.0-beta.1",
+    "sass": "^1.26.10"
   },
   "dependencies": {
-    "core-js": "^3.9.1",
-    "regenerator": "^0.14.7",
-    "runtime": "^0.14.1",
-    "yarn": "^1.22.10"
-  },
-  "presets": [
-    "env"
-  ],
-  "plugins": [
-    "transform-runtime",
-    "@babel/plugin-proposal-class-properties"
-  ]
+    "core-js": "^3.6.5",
+    "fractional": "^1.0.0",
+    "regenerator-runtime": "^0.13.7"
+  }
 }
