--- a/package.json
+++ b/package.json
@@ -5,17 +5,18 @@
   "default": "index.html",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html --dist-dir ./dist"
+    "build": "parcel build index.html --out-dir ./dist"
   },
   "author": "Jonas Schedtmann",
   "license": "ISC",
   "devDependencies": {
-    "parcel": "^2.0.0-beta.1",
+    "@parcel/transformer-sass": "^2.0.0-beta.2",
     "sass": "^1.26.10"
   },
   "dependencies": {
     "core-js": "^3.6.5",
     "fractional": "^1.0.0",
+    "parcel": "^2.0.0-beta.2",
     "regenerator-runtime": "^0.13.7"
   }
 }
